package model;

public interface Adapter {
    ChannelDetails getChannelDetails(String channelNameInput);
}